// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPreview renders 1`] = `
<div
  className="video-preview"
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        6:25
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title really really reallllllllllllllllllllyyyyyy long
      </div>
    </div>
    <div>
      <span>
        6.25 million views | 2 days ago
      </span>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders horizontally 1`] = `
<div
  className="video-preview horizontal"
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        6:25
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title really really reallllllllllllllllllllyyyyyy long
      </div>
    </div>
    <div>
      <span>
        6.25 million views | 2 days ago
      </span>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders vertically/default view 1`] = `
<div
  className="video-preview "
>
  <div
    className="image-container"
  >
    <Image
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        6:25
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title really really reallllllllllllllllllllyyyyyy long
      </div>
    </div>
    <div>
      <span>
        6.25 million views | 2 days ago
      </span>
    </div>
  </div>
</div>
`;
